--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "bootstrap": "^5.3.3",
+    "highcharts": "^11.4.0",
     "ngx-toastr": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
